<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:windowBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/nombre_lista"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_on_primary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/nombre_lista">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/fecha_limite_2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_on_primary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputFechaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconContentDescription="Seleccionar fecha"
        app:endIconTint="?attr/colorPrimary"
        android:hint="@string/fecha_limite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/presupuesto_limite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_on_primary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/presupuesto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPresupuesto"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>



