<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/statistics_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/third"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvSemana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semana_actual"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@color/third"
        android:textColor="@color/text_on_primary" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/third"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSemanaAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semana_anterior"
            style="@style/Widget.MaterialComponents.Button"
            app:backgroundTint="?attr/colorSecondary"
            android:textColor="@color/text_on_primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSemanaSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:layout_marginStart="12dp"
            style="@style/Widget.MaterialComponents.Button"
            app:backgroundTint="?attr/colorSecondary"
            android:textColor="@color/text_on_primary" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExportarExcel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportar_semana_excel"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.Button"
        app:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary" />
</LinearLayout>

